--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # JAVASCRIPT
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# image_uploads
+image_uploads/
+
 # compiled output
 /dist
 /tmp
@@ -258,4 +261,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
 
