--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# CUSTOM
+image_outputs/
+image_uploads/
+
 # JAVASCRIPT
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
