--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,19 @@
   "private": true,
   "dependencies": {
     "@metamask/sdk": "^0.3.2",
+    "@react-three/drei": "^9.77.3",
+    "@react-three/fiber": "^8.13.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.14",
+    "@types/three": "^0.152.1",
     "@worldcoin/idkit": "^0.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
+    "three": "^0.153.0",
     "web-vitals": "^2.1.4",
     "web3": "^4.0.1"
   },
